css/styles.css
/* GLOBAL STYLES */

body{
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Oswald', 'Open Sans', Arial, Helvetica, sans-serif;
    font-size: 2rem;
}

a, p, li{
    font-family: 'Quicksand', 'Open Sans', Arial, Helvetica, sans-serif;
    font-size: 1rem;
}

li > a{
    text-decoration: none;
    color: black;
}

/* STYLING THE HEADER */ 

header{
    display: flex;
    flex-direction: row;
    height: 50px;
    background-color: #78AB41;
}

header > a{
    display: flex;
    justify-content: center;   /*MADE THIS FLEX TO CENTER THE LOGO */
    align-items: center;
    width: 100px;
}

.header_logo{
    height: 90%;
}

.nav_ul{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 0px auto;
    background-color: #78AB41;
    width: 100%;
    border-radius: 0px 0px 0px 15px;
    padding: 50px 0px 0px 0px;
    align-items: flex-end;
}

.nav_li{
    list-style: none;
    margin: 10px 15px;
}

.nav_li > a{
    font-family: 'Oswald', 'Open Sans', Arial, Helvetica, sans-serif;
    font-size: 1.5rem;
    transition: ease-in-out 0.3s;
}

.nav_li > a:hover{
    color: wheat;
    font-size: 2.5rem;
    transition: ease-in-out 0.3s;
}

.empty_space{
    height: 0px;
    width: 0px;
}

/* THIS IS FOR THE HERO IMAGE AND STORY */ 

.hero_story{
    background-image: url(../images/hero1.jpeg);
    min-height: 1080px;
    margin: 0;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;  /*  I'VE SET THIS TO FLEX SO THAT THE HERO_TXT DIV CAN FLEX-GROW TO FILL THE ENTIRE  CONTAINER. 
                        THIS, IN TURN WAS DONE TO CREATE A MASK ON TOP OF THE IMAGE, WHICH ENHANCES THE CONTRAST WITHOUT NEED FOR PHOTOSHOPPING.
                        AND WHILE PHOTOSHOPPING MIGHT BE EASIER, I WANT TO DO AS MUCH AS POSSIBLE IN CSS. THE TASK ISN'T LEARNING PHOTOSHOP, BUT HTML/CSS. 
                        AS AN ADDED BONUS, I WAS ABLE TO MAKE A HIGH CONTRAST VERSION FOR MOBILE, WHERE THE TEXT WAS HARD TO SEE DUE TO IT'S PLACEMENT */
}

.hero_mask{
    flex-grow: 1;
    background: #00000061;
    border: none;
    margin-bottom: 0px;
}

.hero_txt{
    position: sticky;
    top: 200px;  
    display: flex;
    flex-direction: column;
    align-items: center;    
}

.hero_txt > *{
    color: #FFFFFF;
    font-size: 1.4rem;
    text-align: center;
}

.hero_txt > h1{
    font-size: 3rem;
    margin-bottom: 0px;
}

.cta_btn{
    text-decoration: none;
    border: 2px solid black;
    border-radius: 15px;
    padding: 10px;
    background-color: #DF7C1F;
    color: black;
    font-weight: bold;
    margin-bottom: 15px;
}

/* //////// THIS IS FOR CREATING THE HAMBURGER MENU //////// */

nav{
    display: none;
    width: 100%;
}

#hamburger_menu{
    display: none;
}

#hamburger_menu:checked ~ nav{
    display: block;
    position: relative;
}

#menu_icon{
    font-size: 2rem;
    display: block;
    position: absolute;
    z-index: 1;
    top: 1.2%;
    right: 2.5%;
    padding: 0rem 1.5rem;
}

#menu_icon:hover{
    cursor: pointer;
    position: absolute;
}


/* THIS IS FOR THE ROW OF FEATURED PRODUCTS */ 


.featured > h2{
    text-align: center;
}

.webshop_row{
    display: flex;
    flex-direction: row;
    max-height: 350px;
    justify-content: center;
    overflow-y: auto;
    max-width: 1200px;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
    margin: auto;
    flex-wrap: wrap;
}

::-webkit-scrollbar{
    width: 0;
    background: transparent;
}
.webshop_rowpic{
    max-height: 150px;
    max-width: auto;
    margin: 10px 30px;
}

.picwlink{
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    margin-bottom: 10px;
    min-height: 250px;
    scroll-snap-align: center;
}

.feat_prod_head{
    font-size: 1.5rem;
    margin: 0px;
    padding: 0px;
    text-align: center;
}

.feat_prod_txt{
    max-width: 180px;
    text-align: center;
    margin: 0px 0px 10px 0px;
}

/*THIS IS FOR THE MISSION STATEMENT */  

.rd_mission{
    max-width: 650px;
    margin: auto;
    background-image: url(../images/gondolas.jpeg);
    min-height: 700px;
    background-position-y: 80%;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
}

.mission_box{
    padding-top: 1%;
    background-color: #0000007d;
    flex-grow: 1;
}


.mission_header{
    text-align: center;
    margin: 20px auto 10px auto;
    font-size: 3rem;
    color: #FFFFFF;
}

.mission_statement{
    max-width: 350px;
    margin: 10px auto;
    color: #FFFFFF;
    font-size: 1.4rem;
    text-align: center
}

/* THIS IS FOR THE FOOTER */
footer{
    height: 50px;
    border-top: 2px solid black;
    padding: 0px;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 2fr 1fr;
}

.some{
    display: flex;
    flex-direction: row;
    margin-left: 0px;
    align-items: flex-end;
}

.some > i{
    font-size: 3rem;
    margin: 20px;
    display: inline;
}

.about{
    align-self: flex-end;
    margin: 5px 5% 5px 0px;
}

.cs_header{
    margin: 0px;
    font-size: 1.5rem;
}

.cs_ul{
    padding-left: 0px;
    margin: 0px 0px 10px 0px;
}

.cs_li{
    list-style: none;
    margin: 5px 0px;
}

/* MEDIA QUERIES AT THE BOTTOM */

@media (min-width: 600px) {
    nav{
        display: block;
    }

    #menu_icon{
        display: none;
    }

    .hero_mask{
        background-color: #0000001f;
    } 

    .nav_ul{
        display: flex;
        flex-direction: row;
        padding: 0px;
    }
    .nav_li{
        margin: 0px;
    }
    .nav_li > a{
        font-size: 2rem;
    }
    .empty_space{
        height: 50px;
        width: 100px;
    }
    .mission_box{
        padding-top: 50px;
    } /* THIS WAS DONE TO KEEP THE TEXT JUST ABOVE THE NATURAL LINES  OF THE BG IMAGE OF rd_mission ON MORE SCREEN SIZES */
}

